--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -33,10 +33,10 @@ jobs:
 
       - name: Commit results
         run: |
-          git config --global user.name 'Russell Dunphy'
-          git config --global user.email 'rsslldnphy@users.noreply.github.com'
+          git config --global user.name 'Stefan Bogdanel'
+          git config --global user.email 'izdrail@users.noreply.github.com'
           git add -A
           if ! git diff-index --quiet HEAD --; then
-              git commit -am "Scrape results"
+              git commit -am "Scrape results testing"
               git push
           fi 
